--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "beepbeep": "^1.2.0",
     "bluebird": "^3.4.6",
     "copy-paste": "^1.3.0",
-    "keypress": "^0.2.1",
-    "node-notifier": "^4.6.1",
-    "request": "^2.75.0",
-    "tty": "^1.0.1"
+    "request": "^2.75.0"
   }
 }
